[tool.poetry]
name = "promptflow-b"
version = "0.1.0b1"
description = "Prompt flow b"

license = "MIT"

authors = [
  "Microsoft Corporation <aml-pt-eng@microsoft.com>"
]

repository = "https://github.com/microsoft/promptflow"
homepage = "https://microsoft.github.io/promptflow/"

readme = ["README.md"]
keywords = ["a"]

classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

packages = [
  { include = "" }
]

[tool.poetry.urls]
"Bug Reports" = "https://github.com/microsoft/promptflow/issues"

[tool.poetry.dependencies]
python = "<4.0,>=3.8"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
